# crypto_tracker

./: .gitignore  CMakeLists.txt  README.md  cmbuid.sh
.cache/clangd/index/: application.cpp.74EFE23061E6625C.idx  application.h.4438030FECBB6FC2.idx  coin_gecko_client.cpp.5CA2A632BF29619C.idx  main.cpp.80E758724DED63BC.idx  price_buffer.cpp.2E4DBE691411E9BB.idx  renderer.cpp.DB73C20A2D96FA9C.idx
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  coin_gecko_client.cpp  coin_gecko_client.h  mock_server_client.cpp  mock_server_client.h
src/app/: CMakeLists.txt  application.cpp  application.h
src/core/: CMakeLists.txt  price_buffer.cpp  price_buffer.h
src/ui/: CMakeLists.txt  renderer.cpp  renderer.h
